--- a/blog/_posts/2020-03-07-sockets.md
+++ b/blog/_posts/2020-03-07-sockets.md
@@ -17,11 +17,11 @@ A file descriptor is basically a numerical identifier (id) to a lookup table a g
 
 **Fork**
 
-`fork()` is a system call the current process can use to generate copies processes (known as children), that run the same program. One observation is that *t**he child process gets a copy of the parent's data*.
+`fork()` is a system call the current process can use to generate copies processes (known as children), that run the same program. A key observation is that *the child process gets a copy of the parent's data*.
 
 This will be important for our example where the main process uses `fork()` to generate children to handle connections. The child needs to inherit some of the file descriptors from the parent.
 
-`fork()` returns 0 if it's the current process executing the code or a non-zero value corresponding to the process id (pid) of the child. A common way to use `fork()` is the following:
+`fork()` returns `0` if it's the current process executing the code and a non-zero value corresponding to the process id (pid) of the child otherwise. A common way to use `fork()` is the following:
 
 {% highlight c++ %}
 if (!fork()) {
@@ -35,7 +35,7 @@ The return value can be used to distinguish between a parent and child and hence
 
 **Signal**
 
-Signals are one of the simplest ways to communicate with a process. We just send a code that the process knows how to handle. There are OS-level signals like *SIGKILL* and *SIGTERM* and user-defined such as *SIGUSR1*. It's possible to override how a process handles specific signals via `sigaction()` which take a structure that points to a handler:
+Signals are one of the simplest ways to communicate with a process. We just send a code that the process knows how to handle. There are OS-level signals like *SIGKILL* and *SIGTERM* and user-defined such as *SIGUSR1*. It's possible to override how a process handles specific signals via `sigaction()` which takes a structure (also named `sigaction`) that points to a handler (via `.sa_handler`):
 
 {% highlight c %}
 void sigint_handler(int sig) {
@@ -87,7 +87,7 @@ The socket types `SOCK_STREAM` and `SOCK_DGRAM` are associated to the TCP and UD
 
 Before we proceed with our example, we'll cover the C functions in `sys/socket.h` that correspond to the Linux socket APIs:
 
-**getaddrinfo()**is a relatively high-level function that is capable of resolving an address (e.g. google.com) to an actual IP and port. An example of use is ([fullcode](https://github.com/kunigami/blog-examples/blob/master/sockets/getaddrinfo.cpp)):
+`getaddrinfo()` is a relatively high-level function that is capable of resolving an address (e.g. google.com) to an actual IP and port. An example of use is ([fullcode](https://github.com/kunigami/blog-examples/blob/master/sockets/getaddrinfo.cpp)):
 
 {% highlight c++ %}
 int status;
@@ -125,9 +125,9 @@ struct addrinfo {
 };
 {% endhighlight %}
 
-`getaddrinfo()` returns a list of such values, any that match the criteria from the input parameters. In the Beej's [client](https://beej.us/guide/bgnet/examples/client.c) code, we'll see iterates over that list until it finds a set of parameters that it can connect to.
+`getaddrinfo()` returns a list of such values, all that match the criteria from the input parameters. In the Beej's [client](https://beej.us/guide/bgnet/examples/client.c) code, we'll see iterates over that list until it finds a set of parameters that it can connect to.
 
-**socket()** returns a file descriptor. It's basically creating a register with a given ID in a table and it returns that identifier we'll use to establish a connection later. The interface is as follows:
+`socket()` returns a file descriptor. It's basically creating a register with a given ID in a table and it returns that identifier we'll use to establish a connection later. The interface is as follows:
 
 `int socket(int domain, int type, int protocol);`
 * domain could be one of `AF_INET` and `AF_INET6` (IPv4 / PIv6)
@@ -143,7 +143,7 @@ s = socket(res->ai_family, res->ai_socktype, res->ai_protocol);
 
 {% endhighlight %}
 
-**bind()** binds a socket to a specific hostname and port. It is not always needed (for example in the client case). The client doesn't usually care which port is used on its own side, so it can let the OS choose. For the server case it's important because it defines the IP address and port the socket will listen to.
+`bind()`associates a socket (via its file descriptor) to a specific hostname and port. It is not always needed (for example in the client case). The client doesn't usually care which port is used on its own side, so it can let the OS choose. For the server case it's important because it defines the IP address and port the socket will listen to.
 
 This information can be more easily provided via the struct returned from `getaddrinfo()`. By providing null to `getaddrinfo()` and `AI_PASSIVE` to `ai_flags`, we'll have this function fill the IP in res for us:
 
@@ -159,7 +159,7 @@ sockfd = socket(res->ai_family, res->ai_socktype, res->ai_protocol);
 bind(sockfd, res->ai_addr, res->ai_addrlen);
 {% endhighlight %}
 
-**connect()**is the function a client can use to indicate the desire to establish a connection with a given server. Similarly to `bind()` we can use the results from `getaddrinfo()`:
+`connect()` is the function a client can use to indicate the desire to establish a connection with a given server. Similarly to `bind()` we can use the results from `getaddrinfo()`:
 
 {% highlight c++ %}
 getaddrinfo("www.example.com", "3490", &hints, &res);
@@ -167,13 +167,13 @@ sockfd = socket(res->ai_family, res->ai_socktype, res->ai_protocol);
 connect(sockfd, res->ai_addr, res->ai_addrlen);
 {% endhighlight %}
 
-Note how we didn't need to `bind()`. `connect()` filled the local host and a random port for us.
+Note how we didn't need to `bind()`: `connect()` filled the local host and a random port for us.
 
-**listen()** is the function a server calls to define how many connections it can listen to at a specific socket. Beej's article mentions a system limit of 20, but using 5 to 10 seems to work in practice.
+`listen()` is the function a server calls to define how many connections it can listen to at a specific socket. Beej's article mentions a system limit of 20, but using 5 to 10 seems to work in practice.
 
-**accept()** is the function that is actually connects with a specific client. So that the original socket can keep listening to other incoming connections, `accept()` returns a new socket descriptor which will be used to send and receive messages.
+`accept()` is the function that is actually connects with a specific client. So that the original socket can keep listening to other incoming connections, `accept()` returns a new socket descriptor which will be used to send and receive messages.
 
-**send() / recv()** are used to send and receive messages via the established connection. One important aspect is that while you specify the size of the data being sent, the API does not guarantee it will send the whole data, so you need to write a loop to make sure all data is  sent/received.
+`send()` / `recv()` are used to send and receive messages via the established connection. One important aspect is that while you specify the size of the data being sent, the API does not guarantee it will send the whole data, so you need to write a loop to make sure all data is  sent/received.
 
 
 ## Example
@@ -193,7 +193,7 @@ Beej provides examples for server and client codes in C: [server.c](https://beej
 
 ## Conclusion
 
-Beej has an entire guide dedicated to inter-process communication. The guide covers the basic concepts such as creating new processes via fork() and handling signals; synchronization mechanisms suck as locks and semaphores; and communication mechanisms such as pipes, message queues and sockets. I like the conversational style of his writings.
+Beej has an entire guide dedicated to inter-process communication. The guide covers the basic concepts such as creating new processes via `fork()` and handling signals; synchronization mechanisms suck as locks and semaphores; and communication mechanisms such as pipes, message queues and sockets. I like the conversational style of his writings.
 
 I probably wrote code using sockets a long time ago. I didn't have time to dig deep on this subject so I didn't feel like I learned a ton. It was a good refresher nevertheless.
 
