--- a/blog/_posts/2024-10-02-poles.md
+++ b/blog/_posts/2024-10-02-poles.md
@@ -172,6 +172,10 @@ which is also consistent with $(4)$. We can use <i>Lemma 6</i> again to show tha
 
 </proof>
 
+The result makes intuitive sense in light of the original Cauchy Integral Formula. If we assume the annular region has no holes, then $\gamma_2$ vanishes, and $f(z)$ coincides with $f_1(z)$ which is the same the original Cauchy Integral Formula.
+
+Where there's a hole, we need to subtract that portion ($f_2(z)$) from $f_1(z)$, which is what $(4)$ does.
+
 ## Laurent Series
 
 Let's consider the special annular region $\curly{z \mid r \lt \abs{z - a}\lt R} \in \Omega$ for $0 \le r \le R \le \infty$, that is, the region where $\gamma_1$ is the circle of radius $R$ and $\gamma_2$ the circle of radius $r$. Assume that $a \not \in \Omega$.
