--- a/blog/_posts/2020-03-07-sockets.md
+++ b/blog/_posts/2020-03-07-sockets.md
@@ -57,7 +57,8 @@ int main(void) {
 
 ## Network Basics
 
-Beej describes the *Layered Network Model* but follows with this interesting observation:
+Beej describes the [Layered Network Model](https://en.wikipedia.org/wiki/OSI_model) but follows with this interesting observation:
+
 > Now, this model is so general you could probably use it as an automobile repair guide if you really wanted to. A layered model more consistent with Unix might be:
 > * Application Layer (telnet, ftp, etc.)
 > * Host-to-Host Transport Layer (TCP, UDP)
@@ -193,7 +194,7 @@ Beej provides examples for server and client codes in C: [server.c](https://beej
 
 ## Conclusion
 
-Beej has an entire guide dedicated to inter-process communication. The guide covers the basic concepts such as creating new processes via `fork()` and handling signals; synchronization mechanisms suck as locks and semaphores; and communication mechanisms such as pipes, message queues and sockets. I like the conversational style of his writings.
+Beej has an entire guide dedicated to inter-process communication [1]. The guide covers the basic concepts such as creating new processes via `fork()` and handling signals; synchronization mechanisms suck as locks and semaphores; and communication mechanisms such as pipes, message queues and sockets. I like the conversational style of his writings.
 
 I probably wrote code using sockets a long time ago. I didn't have time to dig deep on this subject so I didn't feel like I learned a ton. It was a good refresher nevertheless.
 
