add some images

--- a/blog/_posts/2024-10-02-poles.md
+++ b/blog/_posts/2024-10-02-poles.md
@@ -53,11 +53,17 @@ In order to provide different characterizations of zeros and poles, we shall int
 
 ## Annular Region
 
-Let $\gamma_1$ and $\gamma_2$ be two simple closed counter-clockwise curves in $U$, where $\gamma_2$ is contained inside $\gamma_1$. Denote by $\mbox{int}(\gamma)$ the set of points in the interior of the closed curve $\gamma$ (which excludes points on the curve) and $\mbox{ext}(\gamma)$ the set of points in the exterior of $\gamma$ (also excludes points on the curve).
+Let $\gamma_1$ and $\gamma_2$ be two simple closed counter-clockwise curves in $\Omega$, where $\gamma_2$ is contained inside $\gamma_1$. Denote by $\mbox{int}(\gamma)$ the set of points in the interior of the closed curve $\gamma$ (which excludes points on the curve) and $\mbox{ext}(\gamma)$ the set of points in the exterior of $\gamma$ (also excludes points on the curve).
 
 We define the **annular region** of $\gamma_1$ and $\gamma_2$ as $\mbox{ext}(\gamma_2) \cap \mbox{int}(\gamma_1)$, that is the set points that are contained inside $\gamma_1$ but outside $\gamma_2$. We'll denote this set by $\circledcirc(\gamma_1, \gamma_2)$, but we'll omit the arguments when the curves involved are implied.
 
 If we assume the curves are concentric circles and we draw this region in the plane it will look like a ring, which is *annulus* in Latin, and hence the name *annular region*.
+
+<figure class="center_children">
+  <img src="{{resources_path}}/annular.png" alt="See caption." />
+  <figcaption>Figure 2. The region $\Omega$ is the gray shaded area. The closed curve $\gamma_1$ is depicted in blue and the region $\mbox{int}(\gamma_1)$ is marked as blue strokes. The closed curve $\gamma_2$ is depicted in orange and the region $\mbox{ext}(\gamma_2)$ is marked as orange strokes. The annular region $\circledcirc(\gamma_1, \gamma_2)$ is the intersection of the blue and orange strokes. Note that the $\gamma_1$ and $\gamma_2$ are contained in $\Omega$ but $\mbox{int}(\gamma_1)$ and $\mbox{ext}(\gamma_2)$ are not.</figcaption>
+</figure>
+
 
 **Lemma 1.** (*Cauchy Integral Formula decomposition in annular regions*). Let $f: \Omega \rightarrow \mathbb{C}$ be a holomorphic function and $\gamma_1$ and $\gamma_2$ be two simple closed counter-clockwise curves in $\Omega$, where $\gamma_2$ is contained inside $\gamma_1$ and $\gamma_1$ inside $\Omega$. Then there exists holomorphic functions $f_1: \Omega \cup \mbox{int}(\gamma_1) \rightarrow \mathbb{C}$ and $f_2: \Omega \cup \mbox{ext}(\gamma_2) \rightarrow \mathbb{C}$ such that:
 
@@ -120,7 +126,14 @@ $$
 \int_{\gamma_1} F(w)dw = \int_{\gamma_2} F(w)dw
 $$
 
-Let $z_1$ be a point in $\gamma_1$ and $z_2$ be a point in $\gamma_2$. We connect them by a path $\gamma_3$ and another slighly parallel path $\gamma_4$ such that they're not more than a $\epsilon$ apart.
+Let $z_1$ be a point in $\gamma_1$ and $z_2$ be a point in $\gamma_2$. We connect them by a path $\gamma_3$ and another slighly parallel path $\gamma_4$ such that they're not more than a $\epsilon$ apart (see <i>Figure 1.1</i>).
+
+<figure class="center_children">
+  <img src="{{resources_path}}/proof1_1.png" alt="See caption." />
+  <figcaption>Figure 1.1. Curves $\gamma_1$ and $\gamma_2$ with arbitrary points $z_1$ and $z_2$. Paths $\gamma_3$ and $\gamma_4$ connecting $z_1$ and $z_2$ that are disjoint but no more than $\epsilon$ apart. The reason $\gamma_3$ and $\gamma_4$ are oriented the same way is so that when $\epsilon \rightarrow 0$, they tend to the same thing.</figcaption>
+</figure>
+
+<br /><br />
 
 The path formed via $\gamma_1 \rightarrow \gamma_3 \rightarrow (-\gamma_2) \rightarrow (-\gamma_4)$ forms a closed curve contained in $\Omega$. Let's define it as $\gamma_\epsilon$ where $\epsilon$ determines how close $\gamma_3$ and $\gamma_4$ are. Thus, for any holomorphic function in $\Omega$, including $F(w)$ defined above, Cauchy's Integral Theorem [9] says:
 
