--- a/blog/_posts/2024-11-02-poles.md
+++ b/blog/_posts/2024-11-02-poles.md
@@ -10,7 +10,7 @@ excerpt_separator: <!--more-->
 {% include blog_vars.html %}
 
 <figure class="image_float_left">
-  <img src="{{resources_path}}/weierstrass.png" alt="Portrait of Weierstrass" style="width: 100px;" />
+  <img src="{{resources_path}}/weierstrass.png" alt="Portrait of Weierstrass" />
 </figure>
 
 This is the 8-th post in the series with my notes on complex integration, corresponding to Chapter 4 in Ahlfors’ Complex Analysis.
