--- a/blog/_posts/2020-03-07-sockets.md
+++ b/blog/_posts/2020-03-07-sockets.md
@@ -1,9 +1,13 @@
 ---
 layout: post
-title: "Sockets"
+title: "Network Sockets"
 description: "Overview of network sockets"
 tags: [c++, computer network, operating systems]
 ---
+
+<figure class="image_float_left">
+  <img src="{{resources_path}}/weierstrass.png" alt="Portrait of Weierstrass" style="width: 100px;" />
+</figure>
 
 In this post we'll discuss sockets, more precisely *Network Sockets*. It's based on two excellent articles from Brian “Beej Jorgensen” Hall. We'll first cover some basic OS and Network concepts and then go over some important functions needed to create a simple socket server that can handle requests from multiple clients.
 
@@ -64,8 +68,6 @@ Beej describes the [Layered Network Model](https://en.wikipedia.org/wiki/OSI_mod
 > * Host-to-Host Transport Layer (TCP, UDP)
 > * Internet Layer (IP and routing)
 > * Network Access Layer (Ethernet, wi-fi, or whatever)
->
-
 
 
 In this model, sockets are in the application layer since it relies on TCP or UDP on top of IP. We'll go over these 3 things next.
@@ -185,7 +187,10 @@ The high-level sequence of calls for the API above is:
 * `bind()`
 * `accept()`
 * `recv()/send()`
+
 For the client we have:
+
+
 * `getaddrinfo()`
 * `socket()`
 * `connect()`
