fix font type in table headers

--- a/blog/_posts/2024-12-07-local-ipc.md
+++ b/blog/_posts/2024-12-07-local-ipc.md
@@ -12,13 +12,13 @@ excerpt_separator: <!--more-->
   <img src="{{resources_path}}/image.png" alt="Image of two people talking" />
 </figure>
 
-In this post we'll explore different ways to communicate between two processes when they're running on the same host. We'll consider multiple alternatives.
+In this post we explore different ways to communicate between two processes when they're running on the same host.
 
 <!--more-->
 
-This is largely based on *Beej's Guide to Interprocess Communication* [1]. The key differences: our examples use C++ as opposed to C, for message queues and shared memory, we use the POSIX versions as opposed to System V.
+This is largely based on *Beej's Guide to Interprocess Communication* [1]. The key differences: in this post the examples use C++ as opposed to C, for message queues and shared memory, we use the POSIX versions as opposed to System V.
 
-We also omit the concurrency mechanisms from Beej's guide, namely file locks and semaphores. Finally, our post includes a comparison table between the different mechanisms.
+We also omit the concurrency mechanisms from Beej's guide, namely file locks and semaphores. Finally, this post includes a benchmark and a comparison table between the different mechanisms.
 
 # Index
 {:.no_toc}
