--- a/blog/_posts/2024-12-07-local-ipc.md
+++ b/blog/_posts/2024-12-07-local-ipc.md
@@ -16,9 +16,9 @@ In this post we explore different ways to communicate between two processes when
 
 <!--more-->
 
-This is largely based on *Beej's Guide to Interprocess Communication* [1]. The key differences: in this post the examples use C++ as opposed to C, for message queues and shared memory, we use the POSIX versions as opposed to System V.
+This is largely based on *Beej's Guide to Interprocess Communication* [1]. The key differences: in this post the examples use C++ as opposed to C and for message queues and shared memory, we use the POSIX versions as opposed to System V.
 
-We also omit the concurrency mechanisms from Beej's guide, namely file locks and semaphores. Finally, this post includes a benchmark and a comparison table between the different mechanisms.
+Further, we omit the concurrency mechanisms from Beej's guide, namely file locks and semaphores. And finally, this post includes a benchmark and a comparison table between the different mechanisms.
 
 # Index
 {:.no_toc}
@@ -31,7 +31,7 @@ We also omit the concurrency mechanisms from Beej's guide, namely file locks and
 
 A pipe is a one-way communication channel between a source process and a destination process, using file descriptors.
 
-A downside is that processes don't share file descriptors by default. One exception is when a process creates a child process via `fork()`, in which case the child inherits the file descriptors from the parent, so this is one scenario where pipes are useful.
+A downside is that processes don't share file descriptors by default. One exception is when a process creates a child process via `fork()`, in which case the child inherits the file descriptors from the parent, so this is one scenario where pipes are useful. In newer Linux systems it's possible to copy the file descriptors from one process into another via [`pidfd_getfd()`](https://man7.org/linux/man-pages/man2/pidfd_getfd.2.html) (kernel version +5.6).
 
 Here's an example inspired by Beej's Guide [1]:
 
@@ -65,21 +65,14 @@ int main() {
 }
 {% endhighlight %}
 
-Despite the term "file descriptor", the transport for pipes is actually in memory (kernel space). The function `read()` is not guaranteed to return all that the child process wrote in a single call (the kernel memory space is limited, so it has to stream the data), so we have to loop.
-
-It's a bit tricky to determine when to stop. If we look for `read()` to return 0 (indicating end of file).
-
-
-In Linux systems it's possible to copy the file descriptors from one process into another via [`pidfd_getfd()`](https://man7.org/linux/man-pages/man2/pidfd_getfd.2.html) (kernel version +5.6).
+Despite the term "file descriptor", the transport for pipes is actually in memory (kernel space). The function `read()` is not guaranteed to return all that the child process wrote in a single call (the kernel memory space is limited, so it has to stream the data), so we have to loop. It's thus a bit tricky to determine when to stop. One option is to look for a string terminator `\0` as we do in the example above.
 
 
 ## FIFO
 
 A FIFO is also known as a named pipe. The reason is that it can be identified by an alias (a name) between two unrelated processes.
 
-**Example.** We have two binaries, one for the writer side, another for the reader side. They both obtain a named pipe, which one process writes to, and the other reads from.
-
-The writer gets input for stdin and writes to the named pipe via the file descriptor:
+As our example, we have two binaries, one for the writer side, another for the reader side. They both obtain a named pipe, which one process writes to, and the other reads from. The writer gets input for stdin and writes to the named pipe via the file descriptor:
 
 {% highlight cpp %}
 // writer.cpp
@@ -124,19 +117,15 @@ do {
 } while (size > 0);
 {% endhighlight %}
 
-As we can observe from the API, a named pipe is uni-directional. If we want a 2-way communication channel, we can always use two named pipes.
+The main advantage of named pipes over pipes is that the processes can be independent, they don't need to share file descriptors.
 
-Like pipes, FIFO transform is via byte-streams, which means that if a sender writes a message, it might be read in chunks by `read()`, so we need to read it in a loop.
+Like pipes, a named pipe is uni-directional: if we want a 2-way communication channel, we can always use two named pipes. Also like pipes, FIFO transform is via byte-streams, which means that if a sender writes a message, it might be read in chunks by `read()`, so we need to read it in a loop.
 
 ## Message Queue
 
 There are two main message queues available in Unix OSes: System V and POSIX message queues. The former is included in `sys/msg.h` and the latter in `mqueue.h`.
 
-The POSIX queues are considered more modern than the System V and have more features. Besides API the major difference is between them is that System V queues preserve data on system reboots, whike POSIX queues are thread-safe and have asynchronous notification mechanisms.
-
-Messages in a message queue stay in memory (kernel space), as opposed to *FIFOs* which write to file.
-
-We'll focus on POSIX message queues. Note however that MacOS does not support them, so our experimentation were done in a Linux system.
+The POSIX queues are considered more modern than the System V and have more features. Besides API the major difference is between them is that System V queues preserve data on system reboots, whike POSIX queues are thread-safe and have asynchronous notification mechanisms. For these reasons, we'll focus on POSIX message queues. Note however that MacOS does not support them, so our experimentation were done in a Linux system.
 
 We'll use a writer-reader example like in the previous section. A simple writer code could look like:
 
@@ -192,7 +181,9 @@ auto mq = mq_open(QUEUE_NAME, O_RDONLY | O_CREAT, 0644, &attr);
 
 It's worth noting that `attr` is only applied when a queue is actually created. If a queue already exists, those attributes are ignored. That's why it's better to have `mq_unlink()` once the program is terminated.
 
-We note that message queues are message-oriented, which means messages are read on its entirety via `mq_receive()`, we don't need to keep reading it in a loop like FIFOs or pipes.
+Differently from pipes (named or not), message queues are message-oriented, which means messages are read on its entirety via `mq_receive()`, we don't need to keep reading it in a loop like we did in prior examples.
+
+Like pipes, message queue data is also kept in kernel space memory.
 
 **Priority queues.** It's possible to use POSIX message queues as priority queues by specifying the priority argument on `mq_send()`. Messages with higher priority value are placed ahead of those of lower priority, irrespective of insertion order.
 
@@ -204,7 +195,7 @@ Similar to message queues, there are two main options available in Unix OSes: Sy
 
 As we did with message queues, we'll focus on the POSIX shared memory segments. As usual, our example will consist of a sender and a receiver, but this time they communicate via a shared memory segment.
 
-Shared memory segments do not support any form of synchronization mechanisms. It's up to the application to guarantee that multile processes don't run into race conditions. We can use either POSIX mutexes or semaphores for this, but the API for semaphores it simpler, at least for IPC.
+Shared memory segments do not support any form of synchronization mechanisms. It's up to the application to guarantee that multile processes don't run into race conditions. We can use either POSIX mutexes or semaphores for this. For simple access control, mutexes are simpler and cheaper to us than semaphores, but for the POSIX, the semaphores API is simpler than the mutexes one, so we'll go with that.
 
 {% highlight cpp %}
 #define SHM_NAME "/my_shared_mem"
@@ -251,9 +242,7 @@ int main() {
 
 The function `shm_open()` returns a file descriptor, and is analogous to `open()` API to open or create a file.
 
-When a memory segment is created, it has size 0 bytes. We can use file operations like `ftruncate()` on it to define a given size, but I was wondering why we can't pass the size of the memory segment directly in `shm_open()`.
-
-One reason is that if the segment already exists we might not want to overwrite the existing size. In a way this is consistent with `open()`, however we can append to files without explicitly resizing them.
+When a memory segment is created, it has size 0 bytes. We can use file operations like `ftruncate()` on it to define a given size, but I was wondering why we can't pass the size of the memory segment directly in `shm_open()`. One reason is that if the segment already exists we might not want to overwrite the existing size. In a way this is consistent with `open()`, however we can append to files without explicitly resizing them.
 
 Each process has its own memory address space, so by default when you write to a specific memory address, they actually map to a different physical address. In this case we want them to map to the same address! We do this via the `mmap()` function.
 
@@ -290,11 +279,9 @@ The last observation to make is regarding:
 snprintf((char *)shm_ptr, SHM_SIZE, "Hello world!");
 {% endhighlight %}
 
-Note how we pass the size of the shared memory segment as opposed to the length of the string. This is to protected against buffer overflow in case the string happens to be greater than the segment. Also note this writes to the begining of the segment.
+Note how we pass the size of the shared memory segment as opposed to the length of the string. This is to protected against buffer overflow in case the string happens to be greater than the segment. Also note this writes to the begining of the segment. If we wish to write more things we need to use a proper offset (and an updated size as second parameter).
 
-If we wish to write more things we need to use a proper offset (and an updated size as second parameter).
-
-For this example, case we assume the sender will call `snprintf()` before the receiver.
+For this example, case we assume the sender will call `snprintf()` before the receiver. The receiver example is as follows:
 
 {% highlight cpp %}
 #define SHM_NAME "/my_shared_mem"
@@ -330,19 +317,21 @@ int main() {
 }
 {% endhighlight %}
 
-One nice thing about shared memory segments is that there's no copy involved. It can write directly to the shared physical memory. This in contrast to message queues for example, for which the data has to be copied to a different physical memory location corresponding to the kernel memory. In C++ we have largely abstract this by using custom memory [allocators](https://en.cppreference.com/w/cpp/named_req/Allocator).
+One nice thing about shared memory segments is that there's no copy involved. It can write directly to the shared physical memory. This in contrast to the other structures we covered, which rely on the kernel memory to communicate between processes, so there's necessarily copies involved (a process doesn't have access to the kernel nor other processes memory space).
+
+In C++ we could potentially abstract this by using custom memory [allocators](https://en.cppreference.com/w/cpp/named_req/Allocator), so when allocating data in the heap via `new`, we could internally do it in the shared memory segment. Though on the opposite side we'd still need to rely on some pointer arithmetic.
 
 One caveat though is that if we want to avoid copies, we must make sure the binaries [ABI](https://en.wikipedia.org/wiki/Application_binary_interface) compatible, in the sense that the layout of objects in memory must be the same or at least compatible between the processes.
 
-For example, suppose the processes share data encapsulated in a class `C`, defined in a commonm library. Process 1 runs with an newer version of the library which added a new field to `C`. Suppose it writes an array of `C`s to a shared memory segment from Process 2 to read. Process 2 is running the old version of the library and doesn't know about the new field, so the layout of the array of `C`s it uses is incorrect, and will lead to all sorts of weirdness.
+For example, suppose the processes share data encapsulated in a class `C`, defined in a common library. Process 1 runs with an newer version of the library which added a new field to `C`. Suppose it writes an array of `C`s to a shared memory segment from Process 2 to read. Process 2 is running the old version of the library and doesn't know about the new field, so the layout of the array of `C`s it uses is incorrect, and will lead to all sorts of weirdness.
 
 ## Memory Mapped Files
 
 A **memory mapped file** is a mechanism to use memory semantics for disk. With files you have to explicitly call `fseek()` before writing data to a specific position. A memory mapped file simulates random access where you can just write through pointers.
 
-This would be pretty innefficient to as-is, especially with hard disk drives, because the APIs like `fseek()` reflect physical constraints, in particular sequential memory access.
+This would be pretty innefficient to as-is, especially with hard disk drives, because the APIs like `fseek()` reflect physical constraints, in particular sequential memory access. So the kernel keeps pages in memory and flushes to disk from time to time. It does change the durability semantics: for example, if the host crashes before data is flushed to disk, it is lost.
 
-The kernel keeps pages in memory and flushes to disk from time to time. It does change the durability semantics: for example, if the host crashes before data is flushed to disk, it is lost.
+It turns out that "file" in "memory mapped file" is a bit misleading, because the underlying "storage" doesn't need to be an actual file: it can be anything that has a corresponding file descriptor, including shared memory segments!
 
 Since files are sharable by multiple processes, it can be used for IPC. We'll not delve much into implemention for memory mapped files.
 
@@ -350,9 +339,9 @@ Since files are sharable by multiple processes, it can be used for IPC. We'll no
 
 We discussed about sockets in a [previous post]({{blog}}/2020/03/07/sockets.html) [2] (also based on Beej's tutorials!). In that post we focused on *network* sockets, but sockets can be used for IPC.
 
-You might point out that network sockets can also be used for IPC by specifying the IP address of the localhost and some port. The reason to use a dedicated domain is to avoid overhead, in particular that of TCP/IP layers. The kernel might take shortcuts to avoid some of the overhead but it cannot optimize it all the way. In a benchmark I found on the internet [4], Unix domain sockets were up to 2x faster than network sockets.
+You might point out that network sockets can also be used for IPC by specifying the IP address of the localhost and some port. The reason to use a dedicated domain is to avoid overhead, in particular that of TCP/IP layers. The kernel might take shortcuts to avoid some of the overhead but it cannot optimize it all the way. In a benchmark I found on the internet [4], Unix domain sockets had 2x higher throughput than network sockets.
 
-One way to characterize unix domain sockets is as a 2-way FIFO. To highlight this, we'll use the example from Beej [1], of a client-server setup. The server binds to a specific file description and waits on a loop for client connections. Once a client connects, it waits for some data and it sends it back as response.
+One way to characterize Unix domain sockets is as a 2-way FIFO. To highlight this, we'll use the example from Beej [1], of a client-server setup. The server binds to a specific file description and waits on a loop for client connections. Once a client connects, it waits for some data and it sends it back as response.
 
 Here's a sample code without error handling for simplicity:
 
@@ -452,7 +441,7 @@ We now provide a summary of all the different mechanisms covered in this post, c
 | FIFO                | Kernel Memory        | Byte streams | Independent      | Yes | No  |
 | Message Queue       | Kernel Memory        | Messages     | Independent      | Yes | No  |
 | Shared Memory       | Physical Memory      | N/A          | Independent      | No  | Yes |
-| Memory Mapped Files | Kernel Memory + Disk | N/A          | Independent      | Yes | Yes |
+| Memory Mapped Files | Depends              | N/A          | Independent      | Yes | Yes |
 | Unix Domain Sockets | Kernel Memory        | Messages     | Independent      | Yes | Yes |
 
 ## Conclusion
