--- a/blog/_posts/2024-12-24-open-map.md
+++ b/blog/_posts/2024-12-24-open-map.md
@@ -206,7 +206,7 @@ Another way of saying "$\gamma$ contains a zero of the function $f(z) - a$" is t
 In <i>Lemma 4</i>, we assume $\gamma = D$, so it says there exists a open disk $B = \curly{\abs{w - w_0} \lt \delta}$ such that for all $a \in B$, $f(z) - a$ has the same number of zeros in $D$ as does $f(z) - w_0$.  Since $z_0$ is a zero of $f(z) - w_0$, there's at least one zero of $f(z) - w_0$ in $D$ and thus of $f(z) - a$ in $D$. Let $z_a \in D$ be such that $f(z_a) = a$.
 </proof>
 
-In other words, the inverse image of $B$, $f^{-1}(5)$, is contained in $D$, which in turn implies that $B$ is contained in $f(D)$. Since $D \subseteq \Omega$, then $f(D) \subseteq f(\Omega)$, thus $B \subseteq f(\Omega)$. So for every $w_0 \in f(\Omega)$, there is $z_0$ such that $f(z_0) = w_0$, which implies that there exists an open disk around $w_0$ contained in $f(\Omega)$ which implies $f(\Omega)$ is open.
+In other words, the inverse image of $B$, $f^{-1}(B)$, is contained in $D$, which in turn implies that $B$ is contained in $f(D)$. Since $D \subseteq \Omega$, then $f(D) \subseteq f(\Omega)$, thus $B \subseteq f(\Omega)$. So for every $w_0 \in f(\Omega)$, there is $z_0$ such that $f(z_0) = w_0$, which implies that there exists an open disk around $w_0$ contained in $f(\Omega)$ which implies $f(\Omega)$ is open.
 
 This proves the *open mapping theorem*:
 
@@ -222,13 +222,13 @@ If $m = 1$, *Lemma 8* shows that locally, $f(z)$ is a bijective and conformal fu
 
 **Lemma 8.** Let $f(z)$ be a non-constant holomorphic function in an open disk $D$ centered at $z_0$, with $z_0$ being the only zero of $f(z) - w_0$, and of order 1.
 
-Then there exists an open disk $B$ centered in $w_0$ such that $f$ is a bijection between $f^{-1}(5)$ and $B$. For this domain, $f$ is also conformal, and $f^{-1}$ is holomorphic.
+Then there exists an open disk $B$ centered in $w_0$ such that $f$ is a bijection between $f^{-1}(B)$ and $B$. For this domain, $f$ is also conformal, and $f^{-1}$ is holomorphic.
 
 <proof>
 
 Let $g(z) = f(z) - w_0$. Since $m = 1$, by definition $g'(z_0) \ne 0$ and we have that $g'(z_0) = f'(z_0)$. This also means that $n(\Gamma, 0) = 1$ and so is $n(\Gamma, a)$ for $a \in B$, which means only one $z_a$ exists in $D$ such that $f(z_a) = a$. Since we count the order of zeros in $n(\Gamma, a)$, it implies that $z_a$ has order 1, and thus that $f'(z_a) \ne 0$.
 
-We conclude that $f(z)$ is a bijection because for every $a$ in $B$ there's exactly one $z_a$ in $f^{-1}(5)$. Since $f'(z) \ne 0$ for all $z \in f^{-1}(5)$, by *Theorem 3* in [7] that $f$ is conformal map in $f^{-1}(5)$. It can also be shown, via the <a href="https://en.wikipedia.org/wiki/Inverse_function_theorem#Holomorphic_inverse_function_theorem">Holomorphic inverse function theorem</a> that $f^{-1}$ is holomorphic at $f^{-1}(5)$. Summarizing as a corollary:
+We conclude that $f(z)$ is a bijection because for every $a$ in $B$ there's exactly one $z_a$ in $f^{-1}(B)$. Since $f'(z) \ne 0$ for all $z \in f^{-1}(B)$, by *Theorem 3* in [7] that $f$ is conformal map in $f^{-1}(B)$. It can also be shown, via the <a href="https://en.wikipedia.org/wiki/Inverse_function_theorem#Holomorphic_inverse_function_theorem">Holomorphic inverse function theorem</a> that $f^{-1}$ is holomorphic at $f^{-1}(B)$. Summarizing as a corollary:
 
 </proof>
 
@@ -264,9 +264,9 @@ We can visualize what $w = f(z)$ does in the case $m \gt 1$. We'll actually cons
 
 $$z = \xi^{-1}((w - w_0)^{1/m})$$
 
-We know that $\xi^{-1}$ is holomorphic and conformal from *Lemma 9*. Consider a disk centered in $w_0$ of radius $\delta$ in the $w$-space. Let's observe what happens to a set of points along a ray from the center, as shown in Figure X (a).
+We know that $\xi^{-1}$ is holomorphic and conformal from *Lemma 9*. Consider a disk centered in $w_0$ of radius $\delta$ in the $w$-space. Let's observe what happens to a set of points along a ray from the center, as shown in *Figure 1 (a)*.
 
-Consider the function $\psi(w) = (w - w_0)^{1/m}$. Which first takes the disk to the origin $(w - w_0)$ and then applies the $n$-th root which has the effect of creating $m$ regions on a disk of radius $\delta^{1/m}$, which we depict in Figure X (b).
+Consider the function $\psi(w) = (w - w_0)^{1/m}$. Which first takes the disk to the origin $(w - w_0)$ and then applies the $n$-th root which has the effect of creating $m$ regions on a disk of radius $\delta^{1/m}$, which we depict in *Figure 1 (b)*.
 
 Then to obtain $z$ by applying $\xi^{-1}$, which is a bijection and conformal, so it will preserve the regions and the angles, but might not preserve overall shapes, as shown in Figure X (c).
 
